@@ -4,11 +4,11 @@ Verbose garbage collection \(verbosegc\) logging is often required when tuning a
 
 The default HCL Digital Experience (DX) WebEngine installation enables verbosegc logging and configures the following generic Java Virtual Machine (JVM) argument:
 
-`-Xlog:safepoint=info,gc:file=verbosegc.log:time,level,tags:filecount=5,filesize=20M`
+`-Xlog:gc*:file=verbosegc.log:time`
 
 The verbosegc log file name is `verbosegc.log`. 
 
-The default HCL Digital Experience installation redirects the verbosegc output to 5 rotating historical log files, each containing 20MB.
+The default HCL Digital Experience Compose installation redirects the verbosegc output to the verbosegc.log file.
 
 For more information about configuring the JVM through Open Liberty see: [Logging and Tracing in Open Liberty](https://openliberty.io/docs/latest/log-trace-configuration.html)
 
